--- a/exercicios.html
+++ b/exercicios.html
@@ -21,7 +21,16 @@
         <div class="container4">p</div>  
     </div>
 
-    <!--ex2-->
+    <!--ex2--> <br><br><br><br>
+
+    <div class="menu">
+        <ul>
+            <li class="Home">Home</li>
+            <li class="QuemSomos">Quem Somos</li>
+            <li class="Clientes">Clientes</li>
+            <li class="Contactos">Contactos</li>
+        </ul>
+    </div>
 
 </body>
 </html>
