ex4 done and file name change again (css)

--- a/exercicio4.html
+++ b/exercicio4.html
@@ -10,24 +10,18 @@
     <meta name="author" content="Mariana ALmeida">
 
 
-    <link rel="stylesheet" href="css/style3.css">
+    <link rel="stylesheet" href="css/style4.css">
 
 </head>
 <body>
 
-    <div class="container"></div>
-
-    <br><br><br>
-
-    <div class="maincontainer">
-        <div class="childcontainer"></div>
-    </div>
+    <div class="circle"></div>
 
 
     <br><br><br>
 
-    <div class="parentcontainer">
-        <div class="soncontainer"></div>
+    <div class="parentcircle">
+        <div class="childcircle"></div>
     </div>
 
 </body>
