--- a/exercicio9menu.html
+++ b/exercicio9menu.html
@@ -15,21 +15,24 @@
 
 </head>
 <body>
-
-        <div class="mainmenu">
-            <div><p>Item 1</p>
-                <div class="submenu">
-                    <p>Item 1.1</p>
-                    <p>Item 1.2</p>
-                    <p>Item 1.3</p>
-                    <p>Item 1.4</p>
-                </div>
+        <div>
+            <div class="container">
+                <ul class="menu">
+                    <li>Menu
+                        <ul class="submenu">
+                            <li>Item 1</li>
+                            <li>Item 2</li>
+                            <li>Item 3</li>
+                            <li>Item 4</li>
+                        </ul>
+                    </li>
+                    <li>Menu</li>
+                    <li>Menu</li>
+                    <li>Menu</li>
+                    <li>Menu</li>
+                    <li>Menu</li>
+                </ul>
             </div>
-            <div><p>Item 2</p></div>
-            <div><p>Item 3</p></div>
-            <div><p>Item 4</p></div>
-            <div><p>Item 5</p></div>
-            <div><p>Item 6</p></div>
         </div>
   
 </body>
